@@ -1,5 +1,6 @@
 2.0.10.dev0
  * #1161: Fix a traceback (TypeError) in the "check" action with Python 3.14.
+ * Change the URL of the local documentation development server to be more like the production URL.
 
 2.0.9
  * #1105: More accurately collect Btrfs subvolumes to snapshot. As part of this, the Btrfs hook no
